--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.mvc.static-path-pattern=/ui/**
 database.address=no-database
 
-# ?????? ?? ????
+
 # logging.level.root=trace
-#?? ??? ???? ?? ??(?????? ??)
-logging.level.com.jw.study.elklogging=trace
+# logging.level.com.jw.study.elklogging=trace
+
+#spring.profile.active=dev
+
+logging.config=classpath:logback.xml
