--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 	implementation 'org.projectlombok:lombok'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
